// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block_header blockHeaderSchema should be valid schema with signature but without id 1`] = `
Object {
  "$id": "/block/header/3",
  "properties": Object {
    "aggregateCommit": Object {
      "fieldNumber": 12,
      "properties": Object {
        "aggregationBits": Object {
          "dataType": "bytes",
          "fieldNumber": 2,
        },
        "certificateSignature": Object {
          "dataType": "bytes",
          "fieldNumber": 3,
        },
        "height": Object {
          "dataType": "uint32",
          "fieldNumber": 1,
        },
      },
      "required": Array [
        "height",
        "aggregationBits",
        "certificateSignature",
      ],
      "type": "object",
    },
    "assetsRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 7,
    },
    "generatorAddress": Object {
      "dataType": "bytes",
      "fieldNumber": 5,
    },
    "height": Object {
      "dataType": "uint32",
      "fieldNumber": 3,
    },
    "maxHeightGenerated": Object {
      "dataType": "uint32",
      "fieldNumber": 10,
    },
    "maxHeightPrevoted": Object {
      "dataType": "uint32",
      "fieldNumber": 9,
    },
    "previousBlockID": Object {
      "dataType": "bytes",
      "fieldNumber": 4,
    },
    "signature": Object {
      "dataType": "bytes",
      "fieldNumber": 13,
    },
    "stateRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 8,
    },
    "timestamp": Object {
      "dataType": "uint32",
      "fieldNumber": 2,
    },
    "transactionRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 6,
    },
    "validatorsHash": Object {
      "dataType": "bytes",
      "fieldNumber": 11,
    },
    "version": Object {
      "dataType": "uint32",
      "fieldNumber": 1,
    },
  },
  "required": Array [
    "version",
    "timestamp",
    "height",
    "previousBlockID",
    "generatorAddress",
    "transactionRoot",
    "assetsRoot",
    "stateRoot",
    "maxHeightPrevoted",
    "maxHeightGenerated",
    "validatorsHash",
    "aggregateCommit",
    "signature",
  ],
  "type": "object",
}
`;

exports[`block_header blockHeaderSchemaWithId should be valid schema with signature and id 1`] = `
Object {
  "$id": "/block/header/3",
  "properties": Object {
    "aggregateCommit": Object {
      "fieldNumber": 12,
      "properties": Object {
        "aggregationBits": Object {
          "dataType": "bytes",
          "fieldNumber": 2,
        },
        "certificateSignature": Object {
          "dataType": "bytes",
          "fieldNumber": 3,
        },
        "height": Object {
          "dataType": "uint32",
          "fieldNumber": 1,
        },
      },
      "required": Array [
        "height",
        "aggregationBits",
        "certificateSignature",
      ],
      "type": "object",
    },
    "assetsRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 7,
    },
    "generatorAddress": Object {
      "dataType": "bytes",
      "fieldNumber": 5,
    },
    "height": Object {
      "dataType": "uint32",
      "fieldNumber": 3,
    },
    "id": Object {
      "dataType": "bytes",
      "fieldNumber": 14,
    },
    "maxHeightGenerated": Object {
      "dataType": "uint32",
      "fieldNumber": 10,
    },
    "maxHeightPrevoted": Object {
      "dataType": "uint32",
      "fieldNumber": 9,
    },
    "previousBlockID": Object {
      "dataType": "bytes",
      "fieldNumber": 4,
    },
    "signature": Object {
      "dataType": "bytes",
      "fieldNumber": 13,
    },
    "stateRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 8,
    },
    "timestamp": Object {
      "dataType": "uint32",
      "fieldNumber": 2,
    },
    "transactionRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 6,
    },
    "validatorsHash": Object {
      "dataType": "bytes",
      "fieldNumber": 11,
    },
    "version": Object {
      "dataType": "uint32",
      "fieldNumber": 1,
    },
  },
  "required": Array [
    "version",
    "timestamp",
    "height",
    "previousBlockID",
    "generatorAddress",
    "transactionRoot",
    "assetsRoot",
    "stateRoot",
    "maxHeightPrevoted",
    "maxHeightGenerated",
    "validatorsHash",
    "aggregateCommit",
    "signature",
    "id",
  ],
  "type": "object",
}
`;

exports[`block_header signingBlockHeaderSchema should be valid schema without signature and id 1`] = `
Object {
  "$id": "/block/header/signing/3",
  "properties": Object {
    "aggregateCommit": Object {
      "fieldNumber": 12,
      "properties": Object {
        "aggregationBits": Object {
          "dataType": "bytes",
          "fieldNumber": 2,
        },
        "certificateSignature": Object {
          "dataType": "bytes",
          "fieldNumber": 3,
        },
        "height": Object {
          "dataType": "uint32",
          "fieldNumber": 1,
        },
      },
      "required": Array [
        "height",
        "aggregationBits",
        "certificateSignature",
      ],
      "type": "object",
    },
    "assetsRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 7,
    },
    "generatorAddress": Object {
      "dataType": "bytes",
      "fieldNumber": 5,
    },
    "height": Object {
      "dataType": "uint32",
      "fieldNumber": 3,
    },
    "maxHeightGenerated": Object {
      "dataType": "uint32",
      "fieldNumber": 10,
    },
    "maxHeightPrevoted": Object {
      "dataType": "uint32",
      "fieldNumber": 9,
    },
    "previousBlockID": Object {
      "dataType": "bytes",
      "fieldNumber": 4,
    },
    "stateRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 8,
    },
    "timestamp": Object {
      "dataType": "uint32",
      "fieldNumber": 2,
    },
    "transactionRoot": Object {
      "dataType": "bytes",
      "fieldNumber": 6,
    },
    "validatorsHash": Object {
      "dataType": "bytes",
      "fieldNumber": 11,
    },
    "version": Object {
      "dataType": "uint32",
      "fieldNumber": 1,
    },
  },
  "required": Array [
    "version",
    "timestamp",
    "height",
    "previousBlockID",
    "generatorAddress",
    "transactionRoot",
    "assetsRoot",
    "stateRoot",
    "maxHeightPrevoted",
    "maxHeightGenerated",
    "validatorsHash",
    "aggregateCommit",
  ],
  "type": "object",
}
`;
